--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -57,18 +57,11 @@
     {% endblock %}
 
     <footer class="container-fluid">
-    	<div class="row">
-    		<div class="col-2">
-    			<a href="index.php"><img class="navbar-brand img-fluid" src="images/IPL Logo - no text.png" style="max-width: 100%; height: auto"></a>
-    		</div>
-    		<div class="col">
-    			<p>National Institute of Physics, College of Science, University of the Philippines, Diliman 1101 Quezon City, Philippines<br />
-    			Telephone: +63 2 981 8500 loc. 3701-03<br />
-    			Program Coordinator: Prof. Caesar Saloma<br />
-    			Email: <a href="mailto:csaloma@nip.upd.edu.ph">csaloma@nip.upd.edu.ph</a><br />
-    			&copy; 1983-{{ this_year }} Instrumentation Physics Laboratory</p>
-    		</div>
-    	</div>
+		<p style="margin-left: 2%">National Institute of Physics, College of Science, University of the Philippines, Diliman 1101 Quezon City, Philippines<br />
+		Telephone: +63 2 981 8500 loc. 3701-03<br />
+		Program Coordinator: Prof. Caesar Saloma<br />
+		Email: <a href="mailto:csaloma@nip.upd.edu.ph">csaloma@nip.upd.edu.ph</a><br />
+		&copy; 1983-{{ this_year }} Instrumentation Physics Laboratory</p>
     </footer>
 </body>
 </html>
