--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -8,20 +8,29 @@
     <script src="/js/jquery.js"></script>
 	<script src="/js/popper.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
     <script src="/js/jquery.dataTables.js"></script>
     <script src="/js/dataTables.bootstrap4.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="/css/font-awesome.css">
     <link rel="stylesheet" href="/css/custom.css" />
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <script src="/js/bs_init.js"></script>
+    <style>
+        body {
+            font-family: 'Nunito', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <nav class="nav navbar navbar-expand-xl bg-light font-weight-bold sticky-top" role="navigation">
     	<div class="container-fluid">
     		<div class="navbar-header col-sm-3">
-    			<a class="navbar-brand" href="index.php"><img src="images/IPL Logo.png" style="max-width: 100%; height: auto"></a>
+    			<a class="navbar-brand" href="/"><img src="images/IPL Logo.png" style="max-width: 100%; height: auto"></a>
     		</div>
     		<button type="button" class="navbar-toggler navbar-toggler-right collapsed bg-success" data-toggle="collapse" data-target="#instru-navbar" aria-controls="instru-navbar" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="sr-only">Toggle navigation</span>
