--- a/ipl/web/templates/web/layout.html
+++ b/ipl/web/templates/web/layout.html
@@ -1,25 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Instrumentation Physics Laboratory</title>
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="web/images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/jquery.js"></script>
-	<script src="/js/popper.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="web/js/jquery.js"></script>
+	<script src="web/js/popper.js"></script>
+    <script src="web/js/bootstrap.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
-    <script src="/js/jquery.dataTables.js"></script>
-    <script src="/js/dataTables.bootstrap4.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <script src="web/js/jquery.dataTables.js"></script>
+    <script src="web/js/dataTables.bootstrap4.js"></script>
+    <link rel="stylesheet" href="web/css/bootstrap.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
+    <link rel="stylesheet" href="web/css/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/custom.css" />
+    <link rel="stylesheet" href="web/css/custom.css" />
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-    <script src="/js/bs_init.js"></script>
+    <script src="web/js/bs_init.js"></script>
     <style>
         body {
             font-family: 'Nunito', sans-serif;
