--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Instrumentation Physics Laboratory</title>
+    <title>{% block title %}{% endblock %} | Instrumentation Physics Laboratory</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/js/jquery.js"></script>
@@ -14,51 +14,55 @@
     <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="/css/custom.css" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="/js/bs_init.js"></script>
     <style>
         body {
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Roboto', sans-serif;
         }
     </style>
 </head>
 <body>
-    <nav class="nav navbar navbar-expand-xl bg-light font-weight-bold sticky-top" role="navigation">
+    <nav class="nav navbar navbar-expand-lg navbar-light bg-light font-weight-bold sticky-top" role="navigation">
     	<div class="container-fluid">
     		<div class="navbar-header col-sm-3">
     			<a class="navbar-brand" href="/"><img src="images/IPL Logo.png" style="max-width: 100%; height: auto"></a>
     		</div>
-    		<button type="button" class="navbar-toggler navbar-toggler-right collapsed bg-success" data-toggle="collapse" data-target="#instru-navbar" aria-controls="instru-navbar" aria-expanded="false" aria-label="Toggle navigation">
+    		<button type="button" class="navbar-toggler navbar-toggler-right collapsed" data-toggle="collapse" data-target="#instru-navbar" aria-controls="instru-navbar" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="sr-only">Toggle navigation</span>
     			<span class="navbar-toggler-icon"></span>
     		</button>
     		<div class="collapse navbar-collapse" id="instru-navbar">
-    			<ul class="nav navbar-nav navbar-right">
+    			<ul class="nav navbar-nav ml-auto">
     				<li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
-    				<li class="nav-item"><a class="nav-link" href="/about">ABOUT</a></li>
     				<li class="dropdown nav-item">
-    					<a class="dropdown-toggle nav-link" href="#research" data-toggle="dropdown" role="button" aria-expand="false">RESEARCH</a>
-    					<ul class="dropdown-menu" style="margin-top: 0">
-    						<a class="dropdown-item" href="#teamone">Team One</a>
-    						<a class="dropdown-item" href="#syncbiooptics">Synchronization &amp; BioOptics</a>
-    						<a class="dropdown-item" href="#vip">Video and Image Processing</a>
-    						<a class="dropdown-item" href="#csg">Complexity Science Group</a>
-    						<a class="dropdown-item" href="#cxteam">CX Team</a>
+                        <a class="nav-link" href="/about">ABOUT</a>
+                        <ul class="dropdown-menu dropdown-menu-right" style="margin-top: 0">
+                            <a class="dropdown-item" href="/principal-investigators">Principal Investigators</a>
+                            <a class="dropdown-item" href="#about-history">History</a>
+                            <a class="dropdown-item" href="#about-awards">Awards &amp; Recognition</a>
+                        </ul>
+                    </li>
+    				<li class="dropdown nav-item">
+    					<a class="nav-link" href="/research">RESEARCH</a>
+    					<ul class="dropdown-menu dropdown-menu-right" style="margin-top: 0">
+    						<a class="dropdown-item" href="/research/team-one">Team One</a>
+    						<a class="dropdown-item" href="/research/sync-biooptics">Synchronization &amp; BioOptics</a>
+    						<a class="dropdown-item" href="/research/vip">Video and Image Processing</a>
+    						<a class="dropdown-item" href="/research/complexity-science">Complexity Science Group</a>
+    						<a class="dropdown-item" href="/research/cx-team">CX Team</a>
     					</ul>
     				</li>
     				<li class="nav-item"><a class="nav-link" href="/publications">PUBLICATIONS</a></li>
     				<li class="dropdown nav-item">
-                        <a class="dropdown-toggle nav-link" href="#members" data-toggle="dropdown" role="button" aria-expand="false">MEMBERS</a>
-                        <ul class="dropdown-menu" style="margin-top: 0">
+                        <a class="nav-link" href="#members" data-toggle="dropdown" role="button" aria-expand="false">MEMBERS</a>
+                        <ul class="dropdown-menu dropdown-menu-right" style="margin-top: 0">
     						<a class="dropdown-item" href="#phd">PhD Faculty</a>
     						<a class="dropdown-item" href="#grad">Graduate Students</a>
     						<a class="dropdown-item" href="#ugrad">Undergraduate Students</a>
     					</ul>
                     </li>
-    				<li class="nav-item"><a class="nav-link" href="#awards">AWARDS</a></li>
-    				<li class="nav-item"><a class="nav-link" href="#featured">FEATURED</a></li>
-    				<li class="nav-item"><a class="nav-link" href="#news">NEWS</a></li>
-    				<li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
     				<li class="nav-item"><a class="nav-link" href="#join">JOIN</a></li>
     			</ul>
     		</div>
@@ -73,12 +77,13 @@
             <div class="col">
                 <h5>For Members</h5>
                 <hr />
-                <a href="https://our.upd.edu.ph/files/calendar/regular/ACAD%20CAL%202019-2020.pdf">Important Dates</a><br />
-                <a href="https://docs.google.com/spreadsheets/u/2/d/1qChkLCnlDHZZHZmLgaXndxaQ7H_nRII9a9BpUABdxiU">Seminars</a><br />
-                <a href="https://docs.google.com/forms/d/1Mc8RJBauLujmmmpBzJ-cyp3Lm92lr3CXIcc7yhqAHZs/viewform">Submit a Plenary Talk</a><br />
-                <a href="https://docs.google.com/forms/d/1fbLDj27YFPcf5ZMxjLHOOq9YeXzLAyCsjW_rOV2hWQk/viewform">Excuse Form</a><br />
-                <a href="https://docs.google.com/forms/d/1bGmMcnAu04fY1VjQrcH_tr-pOCju5X9fpLCO0ytdJ-k/viewform">Report an Achievement</a><br />
-                <a href="https://docs.google.com/a/nip.upd.edu.ph/forms/d/1K4Xp9TDGnR_FNwYNtcHA53IFYFVNO9mWx5XMCeWIiEo/viewform">Report a Publication Acceptance</a>
+                <a href="https://our.upd.edu.ph/files/calendar/regular/ACAD%20CAL%202019-2020.pdf" target="_blank">Important Dates</a><br />
+                <a href="https://docs.google.com/spreadsheets/u/2/d/1qChkLCnlDHZZHZmLgaXndxaQ7H_nRII9a9BpUABdxiU" target="_blank">Seminars</a><br />
+                <a href="https://docs.google.com/forms/d/1Mc8RJBauLujmmmpBzJ-cyp3Lm92lr3CXIcc7yhqAHZs/viewform" target="_blank">Submit a Plenary Talk</a><br />
+                <a href="https://docs.google.com/forms/d/1fbLDj27YFPcf5ZMxjLHOOq9YeXzLAyCsjW_rOV2hWQk/viewform" target="
+                ">Excuse Form</a><br />
+                <a href="https://docs.google.com/forms/d/1bGmMcnAu04fY1VjQrcH_tr-pOCju5X9fpLCO0ytdJ-k/viewform" target="_blank">Report an Achievement</a><br />
+                <a href="https://docs.google.com/a/nip.upd.edu.ph/forms/d/1K4Xp9TDGnR_FNwYNtcHA53IFYFVNO9mWx5XMCeWIiEo/viewform" target="_blank">Report a Publication Acceptance</a>
             </div>
             <div class="col">
                 <b>Instrumentation Physics Laboratory</b><br />
@@ -87,17 +92,17 @@
                 1101 Quezon City, Philippines<br />
                 +63 (2) 981 8500 loc. 3701-03<br />
                 <h3>
-                    <a href="https://www.facebook.com/officialinstru" class="fab fa-facebook-square"></a>
-                    <a href="https://www.twitter.com/officialinstru" class="fab fa-twitter-square"></a>
-                    <a href="mailto:csaloma@nip.upd.edu.ph" class="fas fa-envelope-square"></a>
+                    <a href="https://www.facebook.com/officialinstru" class="fab fa-facebook-square" target="_blank"></a>
+                    <a href="https://www.twitter.com/officialinstru" class="fab fa-twitter-square" target="_blank"></a>
+                    <a href="mailto:csaloma@nip.upd.edu.ph" class="fas fa-envelope-square" target="_blank"></a>
                 </h3>
-                &copy; {{ this_year }} Instrumentation Physics Laboratory
+                &copy; {{ now.year }} Instrumentation Physics Laboratory
             </div>
             <div class="col" style="height: 100px">
-                <a href="http://upd.edu.ph/"><img src="images/UP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-                <a href="http://www.science.upd.edu.ph/"><img src="images/CS.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-                <a href="http://www.nip.upd.edu.ph/"><img src="images/National_Institute_of_Physics_logo.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-    			<a href="http://spp-online.org/"><img src="images/SPP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://upd.edu.ph/" target="_blank"><img src="images/UP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://www.science.upd.edu.ph/" target="_blank"><img src="images/CS.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://www.nip.upd.edu.ph/" target="_blank"><img src="images/National_Institute_of_Physics_logo.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+    			<a href="http://spp-online.org/" target="_blank"><img src="images/SPP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
             </div>
         </div>
     </footer>
